Minor design issues on mobile

--- a/apps/mobile/source/pages/ChooseRoom/styles/index.module.css
+++ b/apps/mobile/source/pages/ChooseRoom/styles/index.module.css
@@ -38,4 +38,6 @@
 
 .lottie {
   height: 250px;
+  width: 250px;
+  margin: 0 auto;
 }
