--- a/apps/mobile/source/pages/ChooseRoomMode/styles/index.module.css
+++ b/apps/mobile/source/pages/ChooseRoomMode/styles/index.module.css
@@ -26,5 +26,6 @@
 
 .lottie {
   height: 150px;
+  width: 150px;
   margin: 0 auto;
 }
